[package]
name = "nano-rs"
version = "0.0.1"
authors = ["Gray Olson <gray@grayolson.com>"]
repository = "https://github.com/termhn/nano-rs"

[dependencies]
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = {git = "https://github.com/termhn/tokio-timer"}
futures = "0.1"
error-chain = "0.11"
nano-lib-rs = {path = "./nano-lib-rs"}
log = "0.4"
fern = "0.5"
chrono = "0.4"
bytes = "0.4"
data-encoding = "2.1"
rand = "0.4"
indexmap = "1.0"
net2 = "0.2"
