[package]
name = "nano-lib-rs"
version = "0.1.0"
authors = ["Gray Olson <gray@grayolson.com>"]
repository = "https://github.com/termhn/nano-rs"

[dependencies]
slog = "2.1"
bitflags = "1.0"
error-chain = "0.11"
bytes = "0.4"
blake2 = "0.7"
nanopow-rs = { path = "../nanopow-rs" }
data-encoding = "2.1"
