[package]
name = "nano-lib-rs"
version = "0.0.1"
authors = ["Gray Olson <gray@grayolson.com>"]
repository = "https://github.com/termhn/nano-rs"

[dependencies]
log = "0.4"
bitflags = "1.0"
byteorder = { version = "1.2", features = ["i128"] }
error-chain = "0.11"
bytes = { version = "0.4", features = ["serde"] }
blake2 = "0.7"
nanopow-rs = { path = "../nanopow-rs" }
data-encoding = "2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
tokio-io = "0.1"
