[package]
name = "nanopow-rs"
version = "0.4.0"
authors = ["Gray Olson <gray@grayolson.com>"]
repository = "https://github.com/termhn/nano-rs"
description = "Small Rust library to generate proof of work for the Nano cryptocurrency."
license = "MIT"

[dependencies]
blake2 = "0.7"
data-encoding = "2.1"
crossbeam-utils = "0.2"
crossbeam-channel = "0.1"
num_cpus = "1.8"
rand = "0.4"
error-chain = "0.11"
byteorder = "1.2"
lazy_static = "1.0"
